--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,17 +53,56 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
 
 
-    <Button
+<!--    <Button-->
+<!--        android:onClick="arteriaLogin"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Login to CometChat"-->
+<!--        android:padding="10dp"-->
+<!--        android:layout_marginStart="48dp"-->
+<!--        android:layout_marginEnd="48dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/user_id"/>-->
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/login_btn"
         android:onClick="arteriaLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Login to CometChat"
-        android:padding="10dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginTop="20dp"
+        android:padding="12dp"
+        android:textColor="@color/textColorWhite"
+        android:backgroundTint="@color/logout"
+        android:textSize="@dimen/logout"
+        android:text="Login to CometChat"
+        app:cornerRadius="6dp"
+        tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_id"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:onClick="createNewUser"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"
+        android:textColor="@color/textColorWhite"
+        android:backgroundTint="@color/logout"
+        android:textSize="@dimen/logout"
+        android:text="Create new user"
+        app:cornerRadius="6dp"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
