--- a/uikit/src/main/res-components/messages/layout/activity_cometchat_media_view.xml
+++ b/uikit/src/main/res-components/messages/layout/activity_cometchat_media_view.xml
@@ -20,11 +20,18 @@
         android:id="@+id/image_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <RelativeLayout
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <VideoView
         android:visibility="gone"
         android:id="@+id/video_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
     <RelativeLayout
         android:visibility="gone"
         tools:visibility="visible"
