--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
 <!--        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>-->
 
     <EditText
-        android:id="@+id/user_id"
+        android:id="@+id/view_user_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -84,7 +84,7 @@
         tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_id"/>
+        app:layout_constraintTop_toBottomOf="@+id/view_user_id"/>
 
     <com.google.android.material.button.MaterialButton
         android:onClick="createNewUser"
