fixed video and files sharing issue in oneplus and other devices

--- a/uikit/src/main/res-components/messages/layout/cometchat_composebox_actions.xml
+++ b/uikit/src/main/res-components/messages/layout/cometchat_composebox_actions.xml
@@ -40,8 +40,22 @@
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:textStyle="bold"
-        android:text="@string/photo_video_library"
+        android:text="@string/photo_library"
         android:drawableStart="@drawable/ic_photo"
+        android:drawableTint="@color/grey"
+        android:drawablePadding="16dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/grey"
+        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/video_message"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:textStyle="bold"
+        android:text="@string/video_library"
+        android:drawableStart="@drawable/ic_videocam_24dp"
         android:drawableTint="@color/grey"
         android:drawablePadding="16dp"
         android:gravity="center_vertical"
