--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CometChat"
+        android:text="Arteria"
         android:textSize="30dp"
         android:textColor="@color/black"
         android:textStyle="italic"
@@ -86,23 +86,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_user_id"/>
 
-    <com.google.android.material.button.MaterialButton
-        android:onClick="createNewUser"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"
-        android:textColor="@color/textColorWhite"
-        android:backgroundTint="@color/logout"
-        android:textSize="@dimen/logout"
-        android:text="Create new user"
-        app:cornerRadius="6dp"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn"/>
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:onClick="createNewUser"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:padding="12dp"-->
+<!--        android:textColor="@color/textColorWhite"-->
+<!--        android:backgroundTint="@color/logout"-->
+<!--        android:textSize="@dimen/logout"-->
+<!--        android:text="Create new user"-->
+<!--        app:cornerRadius="6dp"-->
+<!--        tools:ignore="MissingConstraints"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/login_btn"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
