--- a/ExpLibraryChatSdk/src/main/res/values/themes.xml
+++ b/ExpLibraryChatSdk/src/main/res/values/themes.xml
@@ -1,8 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ExpLibraryChatSdk" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ExpLibraryChatSdk" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowActivityTransitions">false</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
