--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
+<!--        <item name="android:windowBackground">@drawable/bg</item>-->
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,13 +20,13 @@
     </style>
 
 
-    <style name="AppThemeNoActionBar" parent="_Custom.Themes">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/purple_700</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+<!--    <style name="AppThemeNoActionBar" parent="_Custom.Themes">-->
+<!--        <item name="colorPrimary">@color/purple_500</item>-->
+<!--        <item name="colorPrimaryDark">@color/black</item>-->
+<!--        <item name="colorAccent">@color/purple_700</item>-->
+<!--        <item name="windowActionBar">false</item>-->
+<!--        <item name="windowNoTitle">true</item>-->
+<!--    </style>-->
 
-    <style name="_Custom.Themes" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge"/>
+<!--    <style name="_Custom.Themes" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge"/>-->
 </resources>
