added forward feature and implemented the push notification sound and vibration

--- a/uikit/src/main/res-components/messages/layout/activity_cometchat_forward_message.xml
+++ b/uikit/src/main/res-components/messages/layout/activity_cometchat_forward_message.xml
@@ -28,7 +28,6 @@
         <RelativeLayout
             android:id="@+id/searchbar_view"
             android:layout_below="@id/forward_toolbar"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
@@ -44,6 +43,7 @@
                 android:drawableStart="@drawable/ic_search_24dp"
                 android:drawablePadding="5dp"
                 android:padding="8dp"
+                android:visibility="gone"
                 android:background="@drawable/search_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
