--- a/app/src/main/res/layout/activity_chat_launch.xml
+++ b/app/src/main/res/layout/activity_chat_launch.xml
@@ -20,7 +20,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.google.android.material.button.MaterialButton
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:onClick="launchChatApp"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        android:padding="12dp"-->
+<!--        android:text="Launch Chat App"-->
+<!--        app:cornerRadius="6dp"-->
+<!--        tools:ignore="MissingConstraints"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
+
+    <Button
         android:onClick="launchChatApp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,7 +46,6 @@
         android:padding="12dp"
         android:text="Launch Chat App"
         app:cornerRadius="6dp"
-        tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
