--- a/android-java-chat-ui-kit-master/uikit/src/main/res/values/styles.xml
+++ b/android-java-chat-ui-kit-master/uikit/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge" />
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge" />
 
     <style name="TransparentCompat" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
