--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Arteria" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+    <style name="Theme.Arteria" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
@@ -40,7 +40,7 @@
         <item name="android:windowActivityTransitions">false</item>
         <!--  specify enter and exit transitions  -->
     </style>
-    <style name="_Custom.Themes" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+    <style name="_Custom.Themes" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="buttonStyle">@style/ButtonDefault</item>
         <item name="editTextStyle">@style/EditTextDefault</item>
         <item name="autoCompleteTextViewStyle">@style/AutoCompleteTextView.SearchView</item>
