--- a/uikit/src/main/res-components/users/layout/activity_cometchat_user_detail.xml
+++ b/uikit/src/main/res-components/users/layout/activity_cometchat_user_detail.xml
@@ -1,9 +1,27 @@
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <RelativeLayout
+        android:id="@+id/bg_progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_translucentuikit"
+        android:clickable="false"
+        android:elevation="10dp"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.ProgressBar.Inverse"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
@@ -240,4 +258,4 @@
         <!-- End of Shared Media-->
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+</RelativeLayout>
