--- a/uikit/src/main/res-components/messages/layout/fragment_cometchat_message_actions.xml
+++ b/uikit/src/main/res-components/messages/layout/fragment_cometchat_message_actions.xml
@@ -27,6 +27,7 @@
         android:drawablePadding="16dp"
         android:gravity="center_vertical"
         android:clickable="true"
+        android:visibility="gone"
         android:foreground="?attr/selectableItemBackground"
         android:textStyle="bold"
         android:text="@string/translate_message"
@@ -41,6 +42,7 @@
         android:gravity="center_vertical"
         android:drawableStart="@drawable/ic_info"
         android:textStyle="bold"
+         android:visibility="gone"
         android:text="@string/message_information"
         android:padding="16dp"
         android:layout_width="match_parent"
@@ -101,6 +103,7 @@
         android:gravity="center_vertical"
         android:drawableStart="@drawable/ic_share_24dp"
         android:textStyle="bold"
+        android:visibility="gone"
         android:text="@string/share_message"
         android:padding="16dp"
         android:layout_width="match_parent"
