--- a/uikit/src/main/res-components/messagebubbles/layout/thread_location_message_item.xml
+++ b/uikit/src/main/res-components/messagebubbles/layout/thread_location_message_item.xml
@@ -41,20 +41,36 @@
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="1dp">
+            android:layout_marginBottom="1dp"
+            app:cardBackgroundColor="@color/message_bubble_grey">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="150dp"
-                    android:id="@+id/iv_map"/>
+<!--                <ImageView-->
+<!--                    android:layout_width="250dp"-->
+<!--                    android:layout_height="150dp"-->
+<!--                    android:id="@+id/iv_map"/>-->
+
+                <RelativeLayout
+                    android:id="@+id/rv_left_map"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/textColorWhite">
+                    <ImageView
+                        tools:src="@tools:sample/avatars"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/iv_map"
+                        android:src="@drawable/maps_logo"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"/>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/iv_map">
+                    android:layout_below="@+id/rv_left_map">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
