--- a/uikit/src/main/res-components/messages/layout/fragment_cometchat_thread_message.xml
+++ b/uikit/src/main/res-components/messages/layout/fragment_cometchat_thread_message.xml
@@ -84,15 +84,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="250dp"/>
                 <RelativeLayout
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:id="@+id/rl_locationMessage"
                     android:layout_width="match_parent"
                     android:layout_height="200dp">
                     <ImageView
                         android:id="@+id/iv_mapView"
-                        tools:src="@tools:sample/avatars"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:src="@drawable/maps_logo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="120dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"/>
                     <TextView
                         android:padding="16dp"
                         android:id="@+id/tv_address"
