--- a/uikit/src/main/res-components/others/layout/map_share_layout.xml
+++ b/uikit/src/main/res-components/others/layout/map_share_layout.xml
@@ -7,7 +7,9 @@
     <ImageView
         android:id="@+id/map_vw"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp"
+        android:src="@drawable/maps_logo"
+        android:layout_marginTop="20dp"/>
     <TextView
         android:layout_margin="16dp"
         android:textStyle="bold"
