--- a/uikit/src/main/res-components/messages/layout/fragment_cometchat_thread_message.xml
+++ b/uikit/src/main/res-components/messages/layout/fragment_cometchat_thread_message.xml
@@ -390,6 +390,20 @@
     <include layout="@layout/cometchat_edit_message_view"/>
 
     <include layout="@layout/cometchat_reply_message_view"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMemberSuggestions"
+        android:animateLayoutChanges="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:padding="5dp"
+        android:background="@android:color/white"
+        android:layout_above="@+id/bottom_layout"
+        android:orientation="vertical"
+        android:visibility="gone"/>
+
     <FrameLayout
         android:id="@+id/reactions_container"
         android:layout_width="match_parent"
