--- a/uikit/src/main/res-components/messages/layout/activity_cometchat_forward_message.xml
+++ b/uikit/src/main/res-components/messages/layout/activity_cometchat_forward_message.xml
@@ -100,5 +100,27 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:layout_height="wrap_content"/>
+
+
+
+        <RelativeLayout
+            android:id="@+id/bg_progressbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/translucent_bg"
+            android:clickable="false"
+            android:visibility="gone"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            >
+            <!--        android:background="@color/bg_translucentuikit"-->
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.ProgressBar.Inverse"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
+
     </RelativeLayout>
 </layout>
