fixed pin group issue

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,22 +21,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-<!--    <EditText-->
-<!--        android:id="@+id/username"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginEnd="24dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:autofillHints="Username"-->
-<!--        android:hint="Username"-->
-<!--        android:text="admin"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:selectAllOnFocus="true"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>-->
-
     <EditText
         android:id="@+id/view_user_id"
         android:layout_width="0dp"
@@ -46,46 +30,12 @@
         android:layout_marginTop="20dp"
         android:autofillHints="Username"
         android:hint="User ID"
-        android:text=""
+        android:text="vam1"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
-
-
-<!--    <Button-->
-<!--        android:onClick="arteriaLogin"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Login to CometChat"-->
-<!--        android:padding="10dp"-->
-<!--        android:layout_marginStart="48dp"-->
-<!--        android:layout_marginEnd="48dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/user_id"/>-->
-
-<!--    <com.google.android.material.button.MaterialButton-->
-<!--        android:id="@+id/login_btn"-->
-<!--        android:onClick="arteriaLogin"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        android:layout_marginStart="20dp"-->
-<!--        android:layout_marginEnd="25dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:padding="12dp"-->
-<!--        android:textColor="@color/textColorWhite"-->
-<!--        android:backgroundTint="@color/logout"-->
-<!--        android:textSize="@dimen/logout"-->
-<!--        android:text="Login to CometChat"-->
-<!--        app:cornerRadius="6dp"-->
-<!--        tools:ignore="MissingConstraints"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view_user_id"/>-->
 
     <Button
         android:onClick="arteriaLogin"
