--- a/uikit/src/main/res-components/others/layout/group_list_row.xml
+++ b/uikit/src/main/res-components/others/layout/group_list_row.xml
@@ -91,7 +91,19 @@
             android:gravity="center"
             tools:text="9:45"
             android:layout_width="40dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/ivPin"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:gravity="center"
+            android:layout_width="16dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/pin_red"/>
 
     </RelativeLayout>
 
