--- a/uikit/src/main/res-components/messages/layout/cometchat_composebox_actions.xml
+++ b/uikit/src/main/res-components/messages/layout/cometchat_composebox_actions.xml
@@ -33,6 +33,7 @@
         android:gravity="center_vertical"
         android:textColor="@color/greyUikit"
         android:padding="16dp"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
