--- a/uikit/src/main/res-components/shared/layout/cometchat_compose_box.xml
+++ b/uikit/src/main/res-components/shared/layout/cometchat_compose_box.xml
@@ -32,12 +32,11 @@
             android:paddingStart="16dp"
             android:singleLine="false"
             android:inputType="textMultiLine"
-            tools:textColor="@android:color/black"
+            android:textColor="@android:color/black"
             android:padding="8dp"
             android:maxLines="3"
             android:imeOptions="actionSend"
-            android:layout_height="wrap_content"
-            tools:ignore="RtlSymmetry" />
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
     <RelativeLayout
         android:visibility="gone"
