--- a/uikit/src/main/res/values/color.xml
+++ b/uikit/src/main/res/values/color.xml
@@ -6,7 +6,7 @@
     <color name="primaryTextColor">#000000</color>
 
     <color name="textColorWhite">#FFFFFF</color>
-    <color name="bottom">#000000</color>
+    <color name="bottom">#FAFAFA</color>
     <color name="secondaryTextColor">#6b000000</color>
     <color name="light_grey">#EEEEEE</color>
     <color name="message_bubble_grey">#e0e0e0</color>
@@ -18,7 +18,6 @@
     <color name="orange">#FF9800</color>
     <color name="purple">#8867C5</color>
     <color name="dark_blue">#0020F5</color>
-    <color name="colorPrimaryDarkuikit">#0020F5</color>
     <color name="green_600">#43A047</color>
     <color name="red_600">#E53935</color>
     <color name="grey">#B96B6B6B</color>
