--- a/ExpLibraryChatSdk/src/main/res/values/themes.xml
+++ b/ExpLibraryChatSdk/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ExpLibraryChatSdk" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.ExpLibraryChatSdk" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
