--- a/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
+++ b/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
@@ -18,17 +18,21 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/conversation_title"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:textStyle="bold"
                 android:textColor="@color/primaryTextColor"
-                android:id="@+id/tv_title"
-                android:layout_margin="16dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <ImageView
                 android:id="@+id/start_conversation"
