--- a/ExpLibraryChatSdk/src/main/res/values/colors.xml
+++ b/ExpLibraryChatSdk/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="textColorWhiteuikit">#FFFFFFFF</color>
+    <color name="colorPrimaryDarkuikit">#FFFFFFFF</color>
 </resources>
