fixed issues in updated new ui kit

--- a/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
+++ b/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
@@ -58,18 +58,19 @@
             android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/search_bar"
-                android:hint="@string/search"
-                android:imeOptions="actionSearch"
-                android:maxLines="1"
-                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_box"
                 android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="5dp"
-                android:padding="8dp"
-                android:background="@drawable/search_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
+                android:padding="8dp" />
 
         </RelativeLayout>
 
