--- a/uikit/src/main/res-components/shared/layout/cometchat_compose_box.xml
+++ b/uikit/src/main/res-components/shared/layout/cometchat_compose_box.xml
@@ -36,8 +36,7 @@
             android:maxLines="3"
             android:padding="8dp"
             android:paddingStart="16dp"
-            android:singleLine="false"
-            android:textColor="@android:color/black" />
+            android:singleLine="false" />
     </RelativeLayout>
     <RelativeLayout
         android:visibility="gone"
