--- a/uikit/src/main/res/menu/cometchat_navigation_bottom.xml
+++ b/uikit/src/main/res/menu/cometchat_navigation_bottom.xml
@@ -6,10 +6,10 @@
       android:title="@string/chats"
       android:icon="@drawable/ic_chats" />
 
-  <item
-      android:id="@+id/menu_call"
-      android:title="@string/calls"
-      android:icon="@drawable/ic_audiocall" />
+<!--  <item-->
+<!--      android:id="@+id/menu_call"-->
+<!--      android:title="@string/calls"-->
+<!--      android:icon="@drawable/ic_audiocall" />-->
 
   <item
       android:id="@+id/menu_users"
