--- a/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
+++ b/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
@@ -34,20 +34,20 @@
                 android:visibility="gone"
                 tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/start_conversation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:tint="@color/colorPrimary"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/ic_create" />
+<!--            <ImageView-->
+<!--                android:id="@+id/start_conversation"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginEnd="16dp"-->
+<!--                android:layout_marginRight="16dp"-->
+<!--                android:layout_marginBottom="16dp"-->
+<!--                android:clickable="true"-->
+<!--                android:foreground="?attr/selectableItemBackground"-->
+<!--                android:src="@drawable/ic_create"-->
+<!--                android:tint="@color/colorPrimary" />-->
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/rl_search_box"
