--- a/uikit/src/main/res-components/userprofile/layout/fragment_cometchat_user_profile.xml
+++ b/uikit/src/main/res-components/userprofile/layout/fragment_cometchat_user_profile.xml
@@ -56,14 +56,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-            <ImageView
-                android:id="@+id/edit_user_profile"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:tint="@color/colorPrimary"
-                android:src="@drawable/ic_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+
+<!--            <ImageView-->
+<!--                android:id="@+id/edit_user_profile"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:src="@drawable/ic_edit"-->
+<!--                android:tint="@color/colorPrimary" />-->
         </RelativeLayout>
 
         <TextView
