--- a/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
+++ b/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
@@ -34,6 +34,10 @@
                 android:visibility="gone"
                 tools:visibility="visible" />
 
+            <include
+                android:id="@+id/home"
+                layout="@layout/layout_toolbar"/>
+
 <!--            <ImageView-->
 <!--                android:id="@+id/start_conversation"-->
 <!--                android:layout_width="wrap_content"-->
